Added energy expenses to list

--- a/index.html
+++ b/index.html
@@ -39,20 +39,22 @@
       <button id="energyBtn" type="button" class="text-green-700 border-2 border-green-700 rounded-lg bg-green-50 mt-4 mb-2 w-4/5 mx-auto">
         <img src="./media/energy_btn.png" alt="energy_calculation_button" class="h-24 w-24 m-auto">
       </button>
-      <div class="text-xl text-center mt-2">Custo elétrico: R$ <span id="total">0,00</span></div>
+      <div class="text-xl text-center mt-2">Custo elétrico: R$ <span id="energyTotal">0.00</span></div>
     </div>
 
     <div class="border-t-2 border-solid border-gray-500 mt-4 pt-2 flex flex-col w-full">
       <span><strong>Grupo:</strong></span>
-      <ul>
-        <li>- Adam Serafim Felix</li>
-        <li>- Amanda Toniato</li>
-        <li>- Emanuele Alves</li>
-        <li>- Giulia Fonseca</li>
-        <li>- João Pedro Coser</li>
-        <li>- Henrique Brites</li>
-      </ul>
+      <div class="grid grid-cols-2">
+        <div>- Adam Serafim Felix</div>
+        <div>- Amanda Toniato</div>
+        <div>- Emanuele Alves</div>
+        <div>- Giulia Fonseca</div>
+        <div>- João Pedro Coser</div>
+        <div>- Henrique Brites</div>
+      </div>
     </div>
+
+    <button class="bg-red-300 text-sm text-white font-bold py-1 px-2 mt-2 rounded fixed bottom-0 left-0 mb-4 ml-4" onclick="clearSEDataStorageSchema()">Limpar todos os dados</button>
   </div>
 
   <div id="list" class="hidden flex flex-col items-center h-4/6">
@@ -69,22 +71,23 @@
   </div>
 
   <div id="energyList" class="hidden flex flex-col items-center h-4/6">
-    <h1 id="energyListLabel" class="text-3xl text-center mt-4"></h1>
+    <h1 class="text-3xl text-center mt-4">Gastos com energia</h1>
 
-    <div class="my-4 grid grid-cols-4 gap-2">
-      <input id="kWhValue" type="number" placeholder="Custo kWh" class="border p-2">
-      <div class="">R$ <span id="currentValue">0.00</span></div>
-      <button id="returnButton" class="bg-white text-blue-500 p-2 rounded-md col-span-2">Voltar</button>
-      <button id="addkWhButton" class="bg-blue-500 text-white p-2 rounded-md">kWh</button>
+    <div class="my-4 grid grid-cols-5 gap-2">
+      <input id="kWhValue" type="number" placeholder="Custo kWh" class="border col-span-2 p-2">
+      <div class="col-span-2 flex items-center justify-center text-xl">R$&nbsp;<span id="currentKWhValue">0.00</span></div>
+      <button id="returnMainButton" class="bg-white text-blue-500 p-2 rounded-md col-span-1">Voltar</button>
+      <button id="addkWhButton" class="bg-blue-500 text-white p-2 rounded-md col-span-2">Alterar kWh</button>
     </div>
-
-    <hr>
 
     <div class="my-4 grid grid-cols-2 gap-2">
-      <input id="textItem" type="text" placeholder="Descrição" class="border p-2">
-      <input id="numberItem" type="number" placeholder="Valor R$" class="border p-2">
-      <button id="addItemButton" class="bg-blue-500 text-white p-2 rounded-md">Adicionar</button>
+      <input id="energyItem" type="text" placeholder="Descrição do gasto" class="border p-2">
+      <input id="valueItem" type="number" placeholder="Consumo (kW)" class="border p-2">
+      <input id="hoursItem" type="number" placeholder="Horas de uso no dia" class="border p-2">
+      <button id="addItemEnergyButton" class="bg-blue-500 text-white p-2 rounded-md">Adicionar</button>
     </div>
+
+    <ul id="energyItemsList" class="w-full"></ul>
   </div>
 
   <script src="app.js"></script>
